# zarr-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  IMPLEMENTATION_PLAN.md
.github/workflows/: ci.yml  release.yml
docs/: DOCUMENTATION.md  index.md  requirements.txt
docs/api/: compat.md  debug.md  index.md  inspect.md  metadata.md  visualization.md  xarray.md
docs/development/: changelog.md  contributing.md  testing.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/user-guide/: compatibility.md  debug.md  inspect.md  metadata.md  visualization.md  xarray.md
examples/: inspect.py  jenelia.py
tests/: __init__.py  test_compat.py  test_debug.py  test_inspect.py  test_metadata.py  test_xarray.py
zarr_utils/: __init__.py  compat.py  convert.py  debug.py  inspect.py  metadata.py  visualization.py  xarray.py
